--- a/app/src/main/res/layout/structures_building_group.xml
+++ b/app/src/main/res/layout/structures_building_group.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/color_buildings_background"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    tools:ignore="Overdraw">
 
     <TextView
         android:id="@+id/buildingView"
