--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -47,6 +47,11 @@
             android:key="@string/settings_structures_buildings_closed_id"
             android:summary="@string/settings_structures_buildings_closed_summary"
             android:title="@string/settings_structures_buildings_closed_title" />
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="@string/settings_structures_rooms_list_standard_height_id"
+            android:summary="@string/settings_structures_rooms_list_standard_height_summary"
+            android:title="@string/settings_structures_rooms_list_standard_height_title" />
     </PreferenceCategory>
 
 </PreferenceScreen>
