Added some margin

--- a/app/src/main/res/layout-land/scanner_fragment.xml
+++ b/app/src/main/res/layout-land/scanner_fragment.xml
@@ -48,6 +48,7 @@
             android:id="@+id/dayClock"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:format24Hour="EEEE"
             android:padding="10dp"
             android:textAlignment="center"
@@ -77,6 +78,7 @@
             android:id="@+id/timeClock"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:format24Hour="HH:mm.ss"
             android:padding="10dp"
             android:textAlignment="center"
