--- a/app/src/main/res/layout/extras_fragment.xml
+++ b/app/src/main/res/layout/extras_fragment.xml
@@ -27,11 +27,25 @@
             <include
                 android:id="@+id/include_employee_detail"
                 layout="@layout/include_employee_detail"
-                tools:layout_editor_absoluteX="8dp" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <include
                 android:id="@+id/include_contract_detail"
-                layout="@layout/include_contract_detail" />
+                layout="@layout/include_contract_detail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/include_employee_detail" />
 
             <com.muflone.android.django_hotels.NonScrollingListView
                 android:id="@+id/extrasView"
