--- a/app/src/main/res/layout/extras_fragment.xml
+++ b/app/src/main/res/layout/extras_fragment.xml
@@ -16,6 +16,7 @@
         android:layout_weight="0.7" />
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.3">
@@ -47,6 +48,24 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/include_employee_detail" />
 
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/addExtraButton"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/btn_rounded_2"
+                android:drawableStart="@android:drawable/ic_menu_add"
+                android:drawableEnd="@android:drawable/ic_menu_add"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
+                android:text="@string/extras_add_new_extra"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/include_contract_detail" />
+
             <com.muflone.android.django_hotels.NonScrollingListView
                 android:id="@+id/extrasView"
                 android:layout_width="match_parent"
@@ -58,7 +77,7 @@
                 android:choiceMode="singleChoice"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/include_contract_detail" />
+                app:layout_constraintTop_toBottomOf="@+id/addExtraButton" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
