--- a/app/src/main/res/layout/extras_extra_item.xml
+++ b/app/src/main/res/layout/extras_extra_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/extraView"
+        android:id="@+id/descriptionView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -15,13 +15,13 @@
         android:layout_marginBottom="8dp"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/serviceButton"
+        app:layout_constraintEnd_toStartOf="@+id/extraButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="ITEM" />
 
     <android.support.v7.widget.AppCompatButton
-        android:id="@+id/serviceButton"
+        android:id="@+id/extraButton"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -38,9 +38,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:contentDescription="@string/description"
-        app:layout_constraintBottom_toBottomOf="@+id/serviceButton"
+        app:layout_constraintBottom_toBottomOf="@+id/extraButton"
         app:layout_constraintEnd_toStartOf="@+id/transmissionImage"
-        app:layout_constraintTop_toTopOf="@+id/serviceButton"
+        app:layout_constraintTop_toTopOf="@+id/extraButton"
         app:srcCompat="@drawable/ic_note" />
 
     <ImageView
