--- a/app/src/main/res/values/strings_fixed.xml
+++ b/app/src/main/res/values/strings_fixed.xml
@@ -11,6 +11,10 @@
     <!-- Generic descriptions -->
     <string name="placeholder" translatable="false">Placeholder</string>
 
+    <!-- Extras section -->
+    <string name="extras_increase_time" translatable="false">+</string>
+    <string name="extras_decrease_time" translatable="false">-</string>
+
     <!-- Settings section -->
     <string name="settings_tablet_id_id" translatable="false">tablet_id</string>
     <string name="settings_tablet_key_id" translatable="false">tablet_key</string>
