--- a/app/src/main/res/layout/extras_extra_item.xml
+++ b/app/src/main/res/layout/extras_extra_item.xml
@@ -64,8 +64,9 @@
 
     <ImageButton
         android:id="@+id/noteButton"
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="0dp"
+        android:background="@color/colorTransparent"
         android:contentDescription="@string/description"
         app:layout_constraintBottom_toBottomOf="@+id/increaseButton"
         app:layout_constraintEnd_toStartOf="@+id/transmissionImage"
