--- a/app/src/main/res/layout/extras_fragment.xml
+++ b/app/src/main/res/layout/extras_fragment.xml
@@ -48,6 +48,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/include_employee_detail" />
 
+            <com.muflone.android.django_hotels.NonScrollingListView
+                android:id="@+id/extrasView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="@color/color_extras_background"
+                android:choiceMode="singleChoice"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/include_contract_detail" />
+
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/addExtraButton"
                 style="@style/Widget.AppCompat.Button.Colored"
@@ -64,20 +77,7 @@
                 android:text="@string/extras_add_new_extra"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/include_contract_detail" />
-
-            <com.muflone.android.django_hotels.NonScrollingListView
-                android:id="@+id/extrasView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:background="@color/color_extras_background"
-                android:choiceMode="singleChoice"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addExtraButton" />
+                app:layout_constraintTop_toBottomOf="@+id/extrasView" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
