--- a/app/src/main/res/layout/extras_fragment.xml
+++ b/app/src/main/res/layout/extras_fragment.xml
@@ -68,12 +68,14 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/btn_rounded_2"
                 android:drawableStart="@android:drawable/ic_menu_add"
                 android:drawableEnd="@android:drawable/ic_menu_add"
                 android:paddingStart="4dp"
                 android:paddingEnd="4dp"
                 android:text="@string/extras_add_new_extra"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/extrasView" />
