Changed button style

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,5 @@
 
     <color name="color_button_1">#90CAF9</color>
     <color name="color_button_2">#4CAF50</color>
-    <color name="color_button_3">#FF8A65</color>
+    <color name="color_button_3">#D32F2F</color>
 </resources>
