--- a/app/src/main/res/values/strings_fixed.xml
+++ b/app/src/main/res/values/strings_fixed.xml
@@ -40,5 +40,8 @@
     <string name="about_numberprogressbar_title" translatable="false">Android NumberProgressBar</string>
     <string name="about_numberprogressbar_url" translatable="false">daimajia/NumberProgressBar</string>
 
+    <string name="about_itextpdf_title" translatable="false">iText 5</string>
+    <string name="about_itextpdf_url" translatable="false">itext/itextpdf</string>
+
     <string name="about_feedback_subject" translatable="false">Feedback for %s %s</string>
 </resources>
