--- a/app/src/main/res/values/strings_fixed.xml
+++ b/app/src/main/res/values/strings_fixed.xml
@@ -23,7 +23,7 @@
     <string name="settings_scan_orientation_lock_id" translatable="false">scan_orientation_lock</string>
 
     <!-- About section -->
-    <string name="about_app_copyright" translatable="false">Copyright © %1$s %2$d</string>
+    <string name="about_app_copyright" translatable="false">Copyright © %1$s 2018-%2$d</string>
     <string name="about_app_github" translatable="false">muflone/django-hotels-android</string>
     <string name="about_app_playstore" translatable="false">com.muflone.android.django_hotels</string>
     <string name="about_license_url" translatable="false">https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</string>
