--- a/app/src/main/res/drawable/ic_check_ok.xml
+++ b/app/src/main/res/drawable/ic_check_ok.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector android:height="96dp" android:tint="@color/color_button_2"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="96dp" xmlns:android="http://schemas.android.com/apk/res/android">
