--- a/app/src/main/res/drawable/ic_gender_female.xml
+++ b/app/src/main/res/drawable/ic_gender_female.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector android:height="24dp" android:viewportHeight="512"
     android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#D87459" android:pathData="M210.4,330v23.3h91.1V330c27.1,37.8 84.8,44.9 130.8,55.2c2.3,0.5 4.5,1.2 6.6,1.9c20.8,-33.2 32.8,-72.3 32.8,-114.3C471.7,153.6 375.1,57 256,57C136.9,57 40.3,153.6 40.3,272.8c0,42 12,81.2 32.8,114.3c2.1,-0.8 4.3,-1.4 6.6,-1.9C125.7,374.9 183.4,367.8 210.4,330z"/>
