--- a/app/src/main/res/drawable/ic_gender_unknown.xml
+++ b/app/src/main/res/drawable/ic_gender_unknown.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector android:height="24dp" android:viewportHeight="12.7"
     android:viewportWidth="12.7" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillAlpha="0.58506224" android:fillColor="#00000000"
