--- a/app/src/main/res/values/strings_fixed.xml
+++ b/app/src/main/res/values/strings_fixed.xml
@@ -26,7 +26,7 @@
     <string name="about_app_copyright" translatable="false">Copyright © %1$s 2018-%2$d</string>
     <string name="about_app_github" translatable="false">muflone/django-hotels-android</string>
     <string name="about_app_playstore" translatable="false">com.muflone.android.django_hotels</string>
-    <string name="about_license_url" translatable="false">https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</string>
+    <string name="about_license_url" translatable="false">https://www.gnu.org/licenses/gpl-3.0.html</string>
 
     <string name="about_zxing_title" translatable="false">ZXing Android Embedded</string>
     <string name="about_zxing_url" translatable="false">journeyapps/zxing-android-embedded</string>
