Fixed attachment in email using FileProvider in place of bare Uri, since Android 7.0 has deprecated the Uri passing in activities (replaced file:// with content:// protocol)

--- a/app/src/main/res/values/strings_fixed.xml
+++ b/app/src/main/res/values/strings_fixed.xml
@@ -32,6 +32,9 @@
     <string name="author_web" translatable="false">https://www.muflone.com/</string>
     <string name="author_twitter" translatable="false">il_muflone</string>
 
+    <!-- File provider authority -->
+    <string name="app_authority_provider" translatable="false">com.muflone.android.django_hotels.provider</string>
+
     <!-- Generic descriptions -->
     <string name="placeholder" translatable="false">Placeholder</string>
 
